--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/Yeyu_square.jpeg" alt="" /></a>
-					<h1><strong>Yeyu Wang</strong></h1> 
+					<h1><strong>Yeyu Wang 王烨宇 <br> </strong></h1> 
 					<!-- <h1>a fourth-year PHD student advised by Prof. <a href="https://www.epistemicanalytics.org/staff/david-williamson-shaffer/">David Williamson Shaffer</a>.</h1> -->
 					<p>ywang2466@wisc.edu <br> <br>
 						Dept. of Educational Psychology <br> 
