Added pdfs for selected publications and fun projects

--- a/index.html
+++ b/index.html
@@ -39,10 +39,21 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Hello, my new academic friends! </h2>
+							<h2>Hello, my academic friends! </h2>
 						</header>
-						<p>I am a fourth-year PhD student at Epistemic Analytics Lab, advised by Professor David Williamson Shaffer. I am currently preparing my prelim, which is 78.23% enjoyment and 21.77% suffering. My research focus is multimodal data analytics. Well, I am not sure whether adding more modalities will be helpful on the top of a powerful primary unimodality. But my work is to develop alternative methods to address multimodalities just in case this is useful for someone. Please see the "Recent Fun Project" section for details. :D  <br><br> 
-							Brief intro about my trajectory: Educational Technology chose me when I was 18. Fortunately, I don't hate it. So, I continued working in the domain after getting a bachelor degree from Beijing Normal Univeristy, China. I obtained a Master of Educational Technology and Applied Learning Sciences at Human Computer Interaction Institute, Carnegie Mellon University. After graduating from CMU, I worked as a research assistant in Baker EDM Lab at the University of Pennsylvania. I am interested in theory-based analytics-driven research to explore how people learn. I focus both on methodology and application of learning analytics and quantitative ethnography.</p>
+						<p>I am a fourth-year PhD student in Epistemic Analytics Lab at University of Wisconsin-Madison. I am working with <a href="https://www.epistemicanalytics.org/staff/david-williamson-shaffer/">Professor David Williamson Shaffer</a>. 
+							My broad research area is learning analytics and quantitative ethnography. In my recent active projects, I am developing methodologies to analyze multimodal learning data by quantifying modalities as unique temporal influence functions. Please see my recent fun projects for detail. :D 
+							(I am currently preparing my prelim, which is 78.23% enjoyment and 21.77% suffering. ) <br><br>
+							Brief intro about my trajectory: <br>
+							For my bachelor degree, I studied educational technology in Beijing Normal University, China. 
+							<a href="https://scholar.google.com/citations?user=TJxt0-0AAAAJ&hl=en">Professor Jingjing Zhang</a> kindly introduced me to the world of research. 
+							Then, I obtained a Master of Educational Technology and Applied Learning Sciences at Human-Computer Interaction Institute, Carnegie Mellon University. 
+							I took various human-computer interaction courses, and worked with <a href="https://www.cs.cmu.edu/~bmclaren/">Professor Bruce M. McLaren</a> to explore how agency plays a role in learning games. 
+							After graduating from CMU, I worked with <a href="https://learninganalytics.upenn.edu/ryanbaker/">Professor Ryan Baker</a> at the University of Pennsylvania. 
+							I mastered machine learning techniques used in educational domains and was determined to pursue a PhD degree in education. 
+							In 2019, I was admitted to a PhD program in Department of Educational Psychology, at University of Wisconsin-Madison. 
+							I am fortunate to work with <a href="https://www.epistemicanalytics.org/staff/david-williamson-shaffer/">Professor David Williamson Shaffer</a> and went on an adventure of research in Quantitative Ethnography. 
+							
 						<ul class="actions">
 							<li><a href="files/Yeyu_Wang_CV.pdf" class="button">CV</a></li>
 						</ul>
@@ -51,34 +62,44 @@
 				<!-- Two -->
 					<section id="two">
 						<h2>Selected Publications</h2>
-						<p>Wang, Y., Ruis. A. R., Shaffer, D., (2021) Modeling Collaborative Discourse with ENA using a
+						<p><b>Wang, Y.</b>, Ruis. A. R., Shaffer, D., (2021) Modeling Collaborative Discourse with ENA using a
 							Probabilistic Function. Accepted by International Conference on Quantitative Ethnography,
-							Denmark.</p>
-						<p>Wang, Y., Swiecki, Z., Ruis, A. R., & Shaffer, D. W. (2021, February). Simplification of Epistemic
+							Denmark. <a href="files/prob_function.pdf">[PDF]</a></p>
+						<p><b>Wang, Y.</b>, Swiecki, Z., Ruis, A. R., & Shaffer, D. W. (2021, February). Simplification of Epistemic
 							Networks Using Parsimonious Removal with Interpretive Alignment. In proceedings of
-							International Conference on Quantitative Ethnography (pp. 137-151). Springer, Cham.	</p>
-						<p>	Wang, Y., Kai, S., & Baker, R. S. (2020, July). Early Detection of Wheel-Spinning in
+							International Conference on Quantitative Ethnography (pp. 137-151). Springer, Cham.	<a href="files/PRIA.pdf">[PDF]</a></p>
+						<p><b>Wang, Y.</b>, Kai, S., & Baker, R. S. (2020, July). Early Detection of Wheel-Spinning in
 							ASSISTments. In proceedings of International Conference on Artificial Intelligence in Education
-							(pp. 574-585). Springer, Cham.</p>
-						<p>Wang, Y., Nguyen, H., Harpstead, E., Stamper, J., & McLaren, B. M. (2019, June). How Does
+							(pp. 574-585). Springer, Cham.<a href="files/early_detection.pdf">[PDF]</a></p>
+						<p><b>Wang, Y.</b>, Nguyen, H., Harpstead, E., Stamper, J., & McLaren, B. M. (2019, June). How Does
 							Order of Gameplay Impact Learning and Enjoyment in a Digital Learning Game?. In proceedings
-							of International Conference on Artificial Intelligence in Education (pp. 518-531). Springer, Cham. </p>
+							of International Conference on Artificial Intelligence in Education (pp. 518-531). Springer, Cham. <a href="files/game_order.pdf">[PDF]</a></p>
 					</section>
 				<!-- Three -->
 					<section id="three">
 						<h2>Recent Fun Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://www.notion.so/Baba-is-you-3a851cbfc14f4300b9581e9a016afcf8" class="image fit thumb"><img src="images/fulls/baba.jpeg" alt="" width="300" height="200"/></a>
+								<h3>Analyzing eye-gaze and log data in BabaIsYou</h3>
+								<!-- <p>Test.</p> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/QPT.png" class="image fit thumb"><img src="images/thumbs/QPT.png" alt="" width="300" height="200"/></a>
+								<h3>Qualitative Parameter Triangulation</h3>
+								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/viz.png" class="image fit thumb"><img src="images/thumbs/viz.png" alt="" width="300" height="200"/></a>
+								<h3>Multimodal Visualization</h3>
+								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/Multimodal-Learning.jpeg" class="image fit thumb"><img src="images/thumbs/Multimodal-Learning.jpeg" alt="" width="300" height="200"/></a>
+								<h3>Find Multimodal Analytics a Theory Warehouse</h3>
+								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
+							</article>
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -97,11 +118,11 @@
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+							</article> -->
 						</div>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				<!-- Three -->
