Updated personal website and cv

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 						<header class="major">
 							<h2>Hello, my academic friends! </h2>
 						</header>
-						<p>I am a fourth-year PhD student in Epistemic Analytics Lab at University of Wisconsin-Madison. I am working with <a href="https://www.epistemicanalytics.org/staff/david-williamson-shaffer/">Professor David Williamson Shaffer</a>. 
-							My broad research area is learning analytics and quantitative ethnography. In my recent active projects, I am developing methodologies to analyze multimodal learning data by quantifying modalities as unique temporal influence functions. Please see my recent fun projects for detail. :D 
-							(I am currently preparing my prelim, which is 78.23% enjoyment and 21.77% suffering. ) <br><br>
+						<p>I am a fifth-year PhD student in Epistemic Analytics Lab at University of Wisconsin-Madison. I am working with <a href="https://www.epistemicanalytics.org/staff/david-williamson-shaffer/">Professor David Williamson Shaffer</a>. 
+							My research focus on developing methodologies in learning analytics and quantitative ethnography to better represent, understand, and diagnose learning processes. My two major projects include: (1) Trans-Modal analysis, a conceptual and methodological framework to address data fusion issue in multimodal learning analytics, (2) Qualitative Parameter Triangulation, a principled approach to translate qualitative heuristics into quantitative representation for high fidelity learning analytics models. 
+							(I am currently preparing my dissertation proposal, which is 78.23% enjoyment and 21.77% suffering. ) <br><br>
 							Brief intro about my trajectory: <br>
 							For my bachelor degree, I studied educational technology in Beijing Normal University, China. 
 							<a href="https://scholar.google.com/citations?user=TJxt0-0AAAAJ&hl=en">Professor Jingjing Zhang</a> kindly introduced me to the world of research. 
@@ -76,29 +76,29 @@
 							of International Conference on Artificial Intelligence in Education (pp. 518-531). Springer, Cham. <a href="files/game_order.pdf">[PDF]</a></p>
 					</section>
 				<!-- Three -->
-					<section id="three">
-						<h2>Recent Fun Projects</h2>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.notion.so/Baba-is-you-3a851cbfc14f4300b9581e9a016afcf8" class="image fit thumb"><img src="images/fulls/baba.jpeg" alt="" width="300" height="200"/></a>
-								<h3>Analyzing eye-gaze and log data in BabaIsYou</h3>
+					<!-- <section id="three">
+					<!-- 	<h2>Recent Fun Projects</h2>
+					<!-- 	<div class="row">
+						<!-- 	<article class="col-6 col-12-xsmall work-item">
+						<!-- 		<a href="https://www.notion.so/Baba-is-you-3a851cbfc14f4300b9581e9a016afcf8" class="image fit thumb"><img src="images/fulls/baba.jpeg" alt="" width="300" height="200"/></a>
+						<!-- 		<h3>Analyzing eye-gaze and log data in BabaIsYou</h3>
 								<!-- <p>Test.</p> -->
-							</article>
+						<!-- 	</article>
+							<!-- <article class="col-6 col-12-xsmall work-item">
+						<!-- 		<a href="images/fulls/QPT.png" class="image fit thumb"><img src="images/thumbs/QPT.png" alt="" width="300" height="200"/></a>
+						<!-- 		<h3>Qualitative Parameter Triangulation</h3>
+							<!-- 	<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
+							<!-- </article>
+				<!-- 			<article class="col-6 col-12-xsmall work-item">
+				<!-- 				<a href="images/fulls/viz.png" class="image fit thumb"><img src="images/thumbs/viz.png" alt="" width="300" height="200"/></a>
+				<!-- 				<h3>Multimodal Visualization</h3>
+				<!-- 				<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
+				<!-- 			</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/QPT.png" class="image fit thumb"><img src="images/thumbs/QPT.png" alt="" width="300" height="200"/></a>
-								<h3>Qualitative Parameter Triangulation</h3>
+				<!-- 				<a href="images/fulls/Multimodal-Learning.jpeg" class="image fit thumb"><img src="images/thumbs/Multimodal-Learning.jpeg" alt="" width="300" height="200"/></a>
+				<!-- 			<h3>Find Multimodal Analytics a Theory Warehouse</h3>
 								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/viz.png" class="image fit thumb"><img src="images/thumbs/viz.png" alt="" width="300" height="200"/></a>
-								<h3>Multimodal Visualization</h3>
-								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/Multimodal-Learning.jpeg" class="image fit thumb"><img src="images/thumbs/Multimodal-Learning.jpeg" alt="" width="300" height="200"/></a>
-								<h3>Find Multimodal Analytics a Theory Warehouse</h3>
-								<!-- <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> -->
-							</article>
+				<!-- 			</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
